--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "changingsky502/appdownload",
+    "name": "changingsky/appdownload",
     "description": "An autonomous application distribution platform",
     "type": "project",
     "license": "MIT",
